--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net472" />
+  <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Data.Sqlite.Core" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Design" version="3.1.21" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite.Core" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="3.1.21" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.21" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.21" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NAudio" version="2.0.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.0.0" targetFramework="net472" />
@@ -12,23 +37,42 @@
   <package id="NAudio.WinMM" version="2.0.1" targetFramework="net472" />
   <package id="NBitcoin" version="6.0.18" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.12" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.12" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.12" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.12" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.12" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net472" />
   <package id="System.Runtime" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="TencentCloudSDK.Asr" version="3.0.421" targetFramework="net472" />
   <package id="TencentCloudSDK.Common" version="3.0.421" targetFramework="net472" />
 </packages>
