--- a/AudioRecognition.csproj
+++ b/AudioRecognition.csproj
@@ -257,6 +257,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BBL\UserService.cs" />
+    <Compile Include="DAL\CreateDB.cs" />
+    <Compile Include="DAL\DbSRR.cs" />
     <Compile Include="DAL\SqLiteHelper.cs" />
     <Compile Include="DAL\DbUser.cs" />
     <Compile Include="Form1.cs">
@@ -271,9 +273,9 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20211209051351_InitialCreate.cs" />
-    <Compile Include="Migrations\20211209051351_InitialCreate.designer.cs">
-      <DependentUpon>20211209051351_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\20211209164914_InitialCreate.cs" />
+    <Compile Include="Migrations\20211209164914_InitialCreate.designer.cs">
+      <DependentUpon>20211209164914_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ASRContextModelSnapshot.cs" />
     <Compile Include="Model\FlashRecognitionResult.cs" />
@@ -289,8 +291,17 @@
     <Compile Include="Test\test_live.cs" />
     <Compile Include="Test\test_liveREC.cs" />
     <Compile Include="Test\test_recode.cs" />
+    <Compile Include="UI\Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -301,6 +312,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\Register.resx">
+      <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -319,9 +333,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Test\test_wav\16k.wav" />
     <Content Include="Test\test_wav\16k_30s..wav" />
