--- a/AudioRecognition.csproj
+++ b/AudioRecognition.csproj
@@ -184,6 +184,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Diagnostics.DiagnosticSource.4.7.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Interactive.Async, Version=3.2.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>packages\System.Interactive.Async.3.2.0\lib\net46\System.Interactive.Async.dll</HintPath>
     </Reference>
@@ -239,6 +240,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -256,7 +258,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BBL\UserService.cs" />
+    <Compile Include="BLL\LiveMicRecode.cs" />
+    <Compile Include="BLL\LiveRecodeSender.cs" />
+    <Compile Include="BLL\LRRservice.cs" />
+    <Compile Include="BLL\UserService.cs" />
     <Compile Include="DAL\CreateDB.cs" />
     <Compile Include="DAL\DbFRR.cs" />
     <Compile Include="DAL\DbLRR.cs" />
@@ -295,6 +300,12 @@
     <Compile Include="Test\test_live.cs" />
     <Compile Include="Test\test_liveREC.cs" />
     <Compile Include="Test\test_recode.cs" />
+    <Compile Include="UI\LiveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\LiveForm.Designer.cs">
+      <DependentUpon>LiveForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -316,6 +327,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\LiveForm.resx">
+      <DependentUpon>LiveForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
@@ -340,6 +354,11 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="DAL\database.sql" />
+    <Content Include="Resource\a.png" />
+    <Content Include="Resource\b.png" />
+    <Content Include="Resource\rec.png" />
+    <Content Include="Resource\recing.png" />
+    <Content Include="Resource\voice.png" />
     <Content Include="Test\test_wav\16k.wav" />
     <Content Include="Test\test_wav\16k_30s..wav" />
     <Content Include="Test\test_wav\a.mp3" />
