完成录音文件的识别显示

--- a/App.config
+++ b/App.config
@@ -20,9 +20,9 @@
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
   <appSettings>
-    <add key="APPID" value="111111111" />
-    <add key="SECRET_ID" value="xxxxxxxxxxxxxxxxxxxxxx" />
-    <add key="SECRET_KEY" value="xxxxxxxxxxxxxxxxxxxxxxxxx" />
+    <add key="APPID" value="sdaffas" />
+    <add key="SECRET_ID" value="asdfads" />
+    <add key="SECRET_KEY" value="sadfas" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
