--- a/AudioRecognition.csproj
+++ b/AudioRecognition.csproj
@@ -258,9 +258,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\FlashService.cs" />
     <Compile Include="BLL\LiveMicRecode.cs" />
     <Compile Include="BLL\LiveRecodeSender.cs" />
     <Compile Include="BLL\LRRservice.cs" />
+    <Compile Include="BLL\FlashUtil.cs" />
     <Compile Include="BLL\UserService.cs" />
     <Compile Include="DAL\CreateDB.cs" />
     <Compile Include="DAL\DbFRR.cs" />
@@ -300,6 +302,12 @@
     <Compile Include="Test\test_live.cs" />
     <Compile Include="Test\test_liveREC.cs" />
     <Compile Include="Test\test_recode.cs" />
+    <Compile Include="UI\FlashForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FlashForm.Designer.cs">
+      <DependentUpon>FlashForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\LiveForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -327,6 +335,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\FlashForm.resx">
+      <DependentUpon>FlashForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\LiveForm.resx">
       <DependentUpon>LiveForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -356,6 +367,8 @@
     <Content Include="DAL\database.sql" />
     <Content Include="Resource\a.png" />
     <Content Include="Resource\b.png" />
+    <Content Include="Resource\Flash0.png" />
+    <Content Include="Resource\Flash1.png" />
     <Content Include="Resource\rec.png" />
     <Content Include="Resource\recing.png" />
     <Content Include="Resource\voice.png" />
