完成视频加字幕，添加录音模块。

--- a/App.config
+++ b/App.config
@@ -20,9 +20,9 @@
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
   <appSettings>
-    <add key="APPID" value="122222" />
-    <add key="SECRET_ID" value="fasd" />
-    <add key="SECRET_KEY" value="gfsd" />
+    <add key ="APPID" value="43124124"/>
+    <add key ="SECRET_ID" value="adsfadsfads"/>
+    <add key ="SECRET_KEY" value="fadsfdasfas"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
